se agrego ejericio 2 se la semana 2

--- a/index.html
+++ b/index.html
@@ -21,6 +21,62 @@
         </section>
 
 
+         <!--SKILLS-->
+      <section class="skills">
+        <h2>My skills</h2>
+        <div class="percentage">
+          <div class="bar-title">
+            <h3>Html</h3>
+            <div class="bar">
+              <div></div>
+            </div>
+          </div>
+          <div class="bar-title">
+            <h3>Javascript</h3>
+            <div class="bar">
+              <div></div>
+            </div>
+          </div>
+          <div class="bar-title">
+            <h3>CSS</h3>
+            <div class="bar">
+              <div></div>
+            </div>
+          </div>
+          <div class="bar-title">
+            <h3>React</h3>
+            <div class="bar">
+              <div></div>
+            </div>
+          </div>
+          <div class="bar-title">
+            <h3>Angular</h3>
+            <div class="bar">
+              <div></div>
+            </div>
+          </div>
+          <div class="bar-title">
+            <h3>Python</h3>
+            <div class="bar">
+              <div></div>
+            </div>
+          </div>
+          <div class="bar-title">
+            <h3>Figma</h3>
+            <div class="bar">
+              <div></div>
+            </div>
+          </div>
+          <div class="bar-title">
+            <h3>Node.js</h3>
+            <div class="bar">
+              <div></div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
 
 
     </div>
