se modifico semana2 ejercicio 2

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <figure>
                 <img src="./images/banner.png" width="960" heigth="525" alt="Banner" />
             </figure>
-            <h2>Hola, mi nombre es Braulio Cervantes</h2>
+            <h2>Hola, mi nombre es Sebastian Cervantes </h2>
 
 
         </section>
