se agrego css y ejercicio 3 semana 2

--- a/index.html
+++ b/index.html
@@ -5,25 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Portfolio</title>
+
+    <LINK REL=StyleSheet HREF="estilo.css" TYPE="text/css" MEDIA=screen>
 </head>
 <body>
 
     <div class="wrapper">
         <!--BANNER-->
         <section class="banner">
-            <h1>Codigo</h1>
+            <h1 class="h1banner">codiGO</h1>
             <figure>
-                <img src="./images/banner.png" width="960" heigth="525" alt="Banner" />
-            </figure>
-            <h2>Hola, mi nombre es Sebastian Cervantes </h2>
+                <img style="position: absolute; width: 960px; height: 525px; left: 0px; top: 0px; background: url(./images/banner.png);"/>
+              </figure>
+
+
+            <h2 class="h2banner">Hola, mi nombre es Sebastian Cervantes </h2>
 
 
         </section>
 
 
          <!--SKILLS-->
-      <section class="skills">
-        <h2>My skills</h2>
+      <section class="skills" style="position: absolute; width: 960px; height: 424px; left: 0px; top: 525px; background: #7299FE;">
+        <h2 class="h2skills">My skills</h2>
         <div class="percentage">
           <div class="bar-title">
             <h3>Html</h3>
@@ -72,6 +76,37 @@
             <div class="bar">
               <div></div>
             </div>
+          </div>
+        </div>
+      </section>
+
+       <!--SERVICES-->
+       <section class="services" style="position: absolute; width: 960px; height: 424px; left: 0px; top: 949px; background: #FB7171;">
+        <h2 class="h2Servicios">Servicios</h2>
+        <div class="items">
+          <div class="item">
+            <img src="./images/icon.png" width="44" height="44" alt="icon" />
+            <h3>Diseño web</h3>
+          </div>
+          <div class="item">
+            <img src="./images/icon.png" width="44" height="44" alt="icon" />
+            <h3>Desarrollo web</h3>
+          </div>
+          <div class="item">
+            <img src="./images/icon.png" width="44" height="44" alt="icon" />
+            <h3 >Desarrollo Mobile</h3>
+          </div>
+          <div class="item">
+            <img src="./images/icon.png" width="44" height="44" alt="icon" />
+            <h3>Diseño UI</h3>
+          </div>
+          <div class="item">
+            <img src="./images/icon.png" width="44" height="44" alt="icon" />
+            <h3>Diseño UX</h3>
+          </div>
+          <div class="item">
+            <img src="./images/icon.png" width="44" height="44" alt="icon" />
+            <h3 >Metologias Agiles</h3>
           </div>
         </div>
       </section>
