--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Portfolio</title>
 
-    <LINK REL=StyleSheet HREF="estilo.css" TYPE="text/css" MEDIA=screen>
+    <LINK REL=StyleSheet HREF="./estilos/estilo.css" TYPE="text/css" MEDIA=screen>
 </head>
 <body>
 
@@ -110,6 +110,70 @@
           </div>
         </div>
       </section>
+
+       <!--PORTFOLIO-->
+       <section class="portfolio" style="position: absolute;
+       width: 960px;
+       height: 424px;
+       left: 0px;
+       top: 1373px;
+       
+       background: #FFD233;">
+        <h2>Portafolio</h2>
+        <div class="items">
+          <img
+            src="./images/portfolio/1.png"
+            width="140"
+            height="92"
+            alt="one"
+          />
+          <img
+            src="./images/portfolio/2.png"
+            width="140"
+            height="92"
+            alt="two"
+          />
+          <img
+            src="./images/portfolio/3.png"
+            width="140"
+            height="92"
+            alt="three"
+          />
+          <img
+            src="./images/portfolio/4.png"
+            width="140"
+            height="92"
+            alt="four"
+          />
+          <img
+            src="./images/portfolio/5.png"
+            width="140"
+            height="92"
+            alt="five"
+          />
+          <img
+            src="./images/portfolio/6.png"
+            width="140"
+            height="92"
+            alt="six"
+          />
+          <img
+            src="./images/portfolio/7.png"
+            width="140"
+            height="92"
+            alt="seven"
+          />
+          <img
+            src="./images/portfolio/8.png"
+            width="140"
+            height="92"
+            alt="eight"
+          />
+        </div>
+      </section>
+
+
+      
 
 
 
